# djust-admin

./: .gitignore  ISSUES.md  MIGRATION.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
djust_admin/: __init__.py  adapters.py  apps.py  decorators.py  forms.py  options.py  plugins.py  sites.py  views.py
djust_admin/components/: __init__.py
djust_admin/templates/djust_admin/: base.html  index.html  login.html  logout.html  model_delete.html  model_detail.html  model_list.html
djust_admin/templatetags/: djust_admin_tags.py
tests/: __init__.py  admin.py  apps.py  asgi.py  conftest.py  models.py  settings.py  test_basic.py  test_playwright_forms.py  test_plugins.py  urls.py
