[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djust-admin"
version = "0.2.0"
description = "A modern, reactive Django admin interface powered by djust"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "John Tipton", email = "john@djust.org" }
]
keywords = ["django", "admin", "djust", "liveview", "reactive"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django>=4.2",
    "djust>=0.3.0rc5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-asyncio>=0.21",
    "pytest-playwright>=0.4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/djust-org/djust-admin"
Documentation = "https://djust.org/docs/admin/"
Repository = "https://github.com/djust-org/djust-admin"
Changelog = "https://github.com/djust-org/djust-admin/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["djust_admin"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
asyncio_mode = "auto"
