[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djust-admin"
version = "99.0.0"
description = "DEPRECATED: use `pip install djust` instead."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "John Tipton", email = "john@djust.org" }
]
dependencies = [
    "djust>=0.5.6rc1",
]

[project.urls]
Homepage = "https://github.com/djust-org/djust-admin"
Repository = "https://github.com/djust-org/djust-admin"

[tool.hatch.build.targets.wheel]
packages = ["djust_admin"]
